cmake_minimum_required(VERSION 3.27)
project(Algo)

set(CMAKE_CXX_STANDARD 14)

add_executable(Algo
        #        MaximumSubsequenceSum.cpp
        #        Violence.cpp
        TheStrongest.cpp
        #        BubbleSort.cpp
        #        MergeSort.cpp
        #        QuickSort.cpp
        #        SelectSort.cpp
)
